<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- This is parent cygnux pom.xml -->
    <groupId>io.cygnuxltb</groupId>
    <artifactId>rapid</artifactId>
    <version>1.0</version>

    <packaging>pom</packaging>
    <name>rapid</name>

    <url>https://cygnuxltb.io</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>yellow013</name>
        </developer>
    </developers>

    <modules>
        <module>core</module>
        <module>adaptor</module>
        <module>console</module>
        <module>dashboard</module>
        <module>engine</module>
        <module>example</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <spring-boot.version>3.1.6</spring-boot.version>
        <mercury.version>1.0-SNAPSHOT</mercury.version>
        <avro.version>1.11.3</avro.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-parameters</compilerArgument>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:preview</arg>
                    </compilerArgs>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.30</version>
            </dependency>
            <!-- see https://github.com/yellow013/mercury.git -->
            <!-- mercury commons -->
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>commons-core</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>commons-concurrent</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <!-- mercury persistence -->
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>persistence-h2</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <!-- mercury serialization -->
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>serialization-json</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>serialization-avro</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>serialization-sbe</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <!-- mercury transport -->
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>transport-zmq</artifactId>
                <version>${mercury.version}</version>
            </dependency>
            <dependency>
                <groupId>io.mercury</groupId>
                <artifactId>transport-rabbitmq</artifactId>
                <version>${mercury.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>